@@ -232,6 +232,21 @@ mailservers is available via the WWW, in
         severity 234567 wishlist
   </pre>
 
+<dt><code>owner</code> <var>bugnumber</var> <var>address</var> | <code>!</code>
+
+  <dd>Sets <var>address</var> to be the "owner" of #<var>bugnumber</var>.
+  The owner of a $gBug claims responsibility for fixing it and will receive
+  all mail regarding it.  This is useful to share out work in cases where a
+  package has a team of maintainers.
+
+  <p>If you wish to become the owner of the $gBug yourself, you can use the
+  <code>!</code> shorthand or specify your own email address.</p>
+
+<dt><code>noowner</code> <var>bugnumber</var>
+
+  <dd>Forgets any idea that the $gBug has an owner other than the usual
+  maintainer.  If the $gBug had no owner recorded then this will do nothing.
+
 <dt><code>quit</code>
 <dt><code>stop</code>
 <dt><code>thank</code>...
