@@ -13,6 +13,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Implement new .status format that's extensible and easier to read; it
       now lives in .summary rather than .status. Use debbugs-upgradestatus
       to convert existing bug databases.
+    - Implement bug ownership, with new 'owner' and 'noowner' commands
+      (closes: #133453).
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
